[metadata]
name = formgear
version = 0.1
author = Mikhail Kashkin
author-email = m@xen.ru
summary = Form generator engine
description-file = README.md
home-page = https://github.com/xen/formgear
project-url:
    Git, https://github.com/xen/formgear
    Author personal blog, http://vurt.ru/
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD

[files]
packages_root = .
packages = 
    formgear

extra_files =
    setup.py
    README.md
    